# C_Compiler

./: .gitignore  CMakeLists.txt  a.out  allocator.hpp  generator.hpp  main.asm  main.cpp  out  out.asm  parser.hpp  structs.hpp  test.asm  test.c  tests.cpp  tokenizer.hpp
include/: generator.hpp  parser.hpp  structs.hpp  tokenizer.hpp
